syntax = "proto3";

option go_package = "./;animepb";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";


service CountService {
  rpc AddAnimeCount(AnimeIdReq) returns(google.protobuf.Empty) {}

  rpc GetViewCount(AnimeIdsReq) returns(CountRes) {}

  rpc IncrViewCount(AnimeIdReq) returns(google.protobuf.Empty) {}
}

message AnimeIdReq {
  int64 animeId = 1;
}

message AnimeIdsReq {
  repeated int64 animeId = 1;
}

message ViewCountRes {
  repeated CountRes viewCount = 1;
}

message CountRes {
  int64 animeId = 1;
  int64 countId = 2;
}